# TransactTap

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
config/: mappings.json  settings.yaml
config/banks/: chase.yaml  wells_fargo.yaml
src/: __init__.py  main.py
src/auth/: __init__.py  captcha_solver.py  mfa_handler.py  otp_reader.py
src/extractors/: __init__.py  base_extractor.py  chase_extractor.py  extractor_factory.py  selenium_extractor.py  wells_fargo_extractor.py
src/loaders/: __init__.py  bigquery_loader.py
src/models/: __init__.py  transaction.py
src/processors/: __init__.py  transaction_processor.py
src/utils/: __init__.py  config.py  logger.py
terraform/: main.tf  variables.tf
